--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,19 @@
   font-family: "Roboto", sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+img {
+    width: 100%;
+}
+
 nav {
   height: 80px;
   display: flex;
@@ -32,6 +45,10 @@ button:active {
 
 .purple {
     color:#7342d6;
+}
+
+p {
+    line-height: 1.5;
 }
 
 ul {
@@ -88,10 +105,6 @@ header {
     justify-content: space-around;
 }
 
-img {
-    width: 100%;
-}
-
 .header__description {
     display: flex;
     flex-direction: column;
@@ -100,6 +113,7 @@ img {
 
 .header__img--wrapper {
     padding: 20px;
+    z-index: 2;
 }
 
 h1 {
@@ -124,4 +138,85 @@ h2 {
     border: none;
 }
 
+/* HIGHLIGHTS */
+
+#highlights {
+    position: relative;
+    max-width: 100vw;
+}
+
+#highlights:before,
+#highlights:after {
+    background: url('assets/wave.svg');
+    content: "";
+    position: absolute;
+    width: 101vw;
+    height: 12vw;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#highlights:before {
+    transform: translateY(-100%);
+    top: 1px;
+}
+
+#highlights:after {
+    transform: translateY(100%) rotate(180deg);
+    bottom: 1px;
+}
+
+.container {
+    padding: 56px;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.highlight__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.highlight {
+    padding: 0 24px;
+    width: calc(100% / 3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.highlight__para {
+    text-align: center;
+    max-width: 280px;
+}
+
+.highlight__img {
+    border: 2px solid #7342d685;
+    color: #7342d685;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    font-size: 32px;
+    margin-bottom: 24px;
+}
+
+.highlight__subtitle {
+    font-size: 20px;
+    margin-bottom: 16px;
+}
+
+/* FEATURES */
+
+#features {
+    background-color: rgba(115, 66, 214, 0.1);
+}
 
