--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 html {
@@ -16,7 +16,7 @@ html {
 }
 
 .no__cursor {
-    cursor: no-drop;
+  cursor: no-drop;
 }
 
 body {
@@ -35,7 +35,7 @@ nav {
 
 .nav__container {
   width: 100%;
-  min-width: 1200px;
+  max-width: 1200px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -91,6 +91,69 @@ li {
 
 .nav__link--primary:hover {
   text-decoration: none;
+}
+
+.btn__menu {
+  background-color: transparent;
+  font-size: 40px;
+  display: none;
+  border: none;
+  color: #7342d6;
+}
+
+.menu__backdrop {
+  position: absolute;
+  background-color: #242424;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 3;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  visibility: hidden;
+  transition: all 300ms ease;
+  opacity: 0;
+  transform: translate(100%);
+}
+
+.menu--open{
+  max-height: 100vh;
+  overflow:hidden;
+}
+
+.menu--open .menu__backdrop {
+  visibility: visible;
+  opacity: 1;
+  transform: translate(0);
+}
+
+.btn__menu--close {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  padding: 8px;
+  color: white;
+}
+
+.menu__links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu__list {
+  padding: 32px 0;
+}
+
+.menu__link {
+  color: white;
+  font-size: 40px;
+}
+
+.menu__link:hover {
+  text-decoration: underline;
 }
 
 /* LANDING */
@@ -220,6 +283,7 @@ h2 {
 .highlight__subtitle {
   font-size: 20px;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 /* FEATURES */
@@ -299,34 +363,78 @@ h2 {
 /* FOOTER */
 
 footer {
-    background-color: #242424;
+  background-color: #242424;
 }
 
 .footer__logo--img {
-    width: 160px;
-    filter: grayscale(1) invert(1);
+  width: 160px;
+  filter: grayscale(1) invert(1);
 }
 
 .footer__link,
 .footer__copyright {
-color:white;
+  color: white;
 }
 
 .footer__column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer__list {
-    margin: 20px 0 24px 0; 
+  margin: 20px 0 24px 0;
 }
 
 .footer__link {
-padding: 0 8px;
+  padding: 0 8px;
 }
 
 .footer__logo {
-    display: flex;
+  display: flex;
+}
+
+/* Media Sizing */
+
+@media (max-width: 768px) {
+  .header__description {
+    padding: 0 24px;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+
+  h2 {
+    font-size: 26px;
+  }
+
+  button {
+    font-size: 18px;
+  }
+
+  .book {
+    width: 50%;
+  }
+
+
+}
+
+@media (max-width: 550px) {
+.btn__menu {
+  display: block;
+}
+
+  .nav__links {
+    display: none;
+  }
+
+  .highlight {
+    width: 100%;
+  }
+
+  .highlight:not(:last-child) {
+    margin-bottom: 24px;
+  }
 }
