--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-}
-
-a {
-  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
 }
 
 html {
   scroll-behavior: smooth;
-}
-
-.no__cursor {
-  cursor: no-drop;
 }
 
 body {
@@ -24,23 +15,48 @@ body {
   overflow-x: hidden;
 }
 
-img {
-  width: 100%;
-}
-
 nav {
   height: 80px;
   display: flex;
 }
 
-.nav__container {
+img {
   width: 100%;
-  max-width: 1200px;
+}
+
+p {
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+
+
+ul {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
-  padding: 0 24px;
+}
+
+li {
+  list-style-type: none;
+}
+
+h1 {
+  font-size: 56px;
+  color: #7342d6;
+  margin-bottom: 24px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 32px;
+  margin-bottom: 32px;
+  text-align: center;
 }
 
 button {
@@ -51,24 +67,31 @@ button:active {
   transform: translateY(1px);
 }
 
+.btn {
+  background-color: #7342d6;
+  color: white;
+  padding: 12px 24px;
+  font-size: 20px;
+  border-radius: 4px;
+  border: none;
+}
+
 .purple {
   color: #7342d6;
 }
 
-p {
-  line-height: 1.5;
-}
-
-ul {
-  display: flex;
-}
-
-li {
-  list-style-type: none;
-}
-
 .logo {
   width: 160px;
+}
+
+.nav__container {
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .nav__link {
@@ -96,9 +119,9 @@ li {
 .btn__menu {
   background-color: transparent;
   font-size: 40px;
-  display: none;
   border: none;
   color: #7342d6;
+  display: none;
 }
 
 .menu__backdrop {
@@ -108,33 +131,25 @@ li {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 3;
-  justify-content: center;
-  align-items: center;
+  z-index: 99;
   display: flex;
+  align-items: center;
+  justify-content: center;
   visibility: hidden;
   transition: all 300ms ease;
   opacity: 0;
   transform: translate(100%);
 }
 
-.menu--open{
+.menu--open {
   max-height: 100vh;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 .menu--open .menu__backdrop {
-  visibility: visible;
+  visibility: visible !important;
   opacity: 1;
   transform: translate(0);
-}
-
-.btn__menu--close {
-  position: absolute;
-  right: 20px;
-  top: 10px;
-  padding: 8px;
-  color: white;
 }
 
 .menu__links {
@@ -152,14 +167,23 @@ li {
   font-size: 40px;
 }
 
-.menu__link:hover {
-  text-decoration: underline;
+.btn__menu--close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  padding: 8px;
+  color: white;
 }
 
-/* LANDING */
+
+/* 
+
+LANDING
+
+*/
 
 #landing {
-  background-color: rgba(115, 66, 214, 0.1);
+  background-color: rgba(115, 66, 214, 0.1)
 }
 
 header {
@@ -184,41 +208,45 @@ header {
 
 .header__img--wrapper {
   padding: 20px;
-  z-index: 2;
+
+  /* Added this after the tutorial to 
+  show it over the wave on larger screens */
+  z-index: 50;
 }
 
-h1 {
-  font-size: 56px;
-  color: #7342d6;
-  margin-bottom: 24px;
-  text-align: center;
+.container {
+  padding: 56px 0;
 }
 
-h2 {
-  font-size: 32px;
-  margin-bottom: 32px;
-  text-align: center;
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.btn {
-  background-color: #7342d6;
-  color: white;
-  padding: 12px 24px;
-  font-size: 20px;
-  border-radius: 4px;
-  border: none;
+.row__column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-/* HIGHLIGHTS */
+.no-cursor {
+  cursor: not-allowed;
+}
+/* 
+
+HIGHLIGHTS 
+
+*/
 
 #highlights {
   position: relative;
   max-width: 100vw;
 }
 
-#highlights:before,
-#highlights:after {
-  background: url("assets/wave.svg");
+#highlights:after,
+#highlights:before {
+  background: url('assets/wave.svg');
   content: "";
   position: absolute;
   width: 101vw;
@@ -239,16 +267,6 @@ h2 {
   bottom: 1px;
 }
 
-.container {
-  padding: 56px;
-}
-
-.row {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
 .highlight__wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -258,8 +276,8 @@ h2 {
   padding: 0 24px;
   width: calc(100% / 3);
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
 }
 
 .highlight__para {
@@ -268,8 +286,8 @@ h2 {
 }
 
 .highlight__img {
-  border: 2px solid #7342d685;
-  color: #7342d685;
+  border: 2px solid #7342d65d;
+  color: #7342d6;
   width: 100px;
   height: 100px;
   display: flex;
@@ -286,11 +304,15 @@ h2 {
   text-align: center;
 }
 
-/* FEATURES */
+/* 
+
+FEATURES 
+
+*/
 
 #features {
-  background-color: rgba(115, 66, 214, 0.1);
   padding-top: 8vw;
+  background-color: rgba(115, 66, 214, 0.1);
 }
 
 .books {
@@ -301,12 +323,19 @@ h2 {
 .book {
   width: 25%;
   padding: 24px;
+  /* Added after tutorial to push all the books images down */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .book__img {
   max-height: 380px;
   transition: all 300ms ease;
-  cursor: no-drop;
+  cursor: not-allowed;
+  /* Added after tutorial to maintain image aspect ratio */
+  object-fit: contain;
+  object-position: left;
 }
 
 .book__img--wrapper {
@@ -327,7 +356,7 @@ h2 {
 
 .book__title:hover {
   text-decoration: underline;
-  cursor: no-drop;
+  cursor: not-allowed;
 }
 
 .book__ratings {
@@ -341,29 +370,28 @@ h2 {
   color: #bfbfbf;
 }
 
-/* EXPLORE */
+/* 
+
+EXPLORE
+
+*/
 
 #explore {
   background-color: rgba(115, 66, 214, 0.1);
 }
 
-.explore__wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+/* 
 
-.explore__title {
-  font-size: 28px;
-  font-weight: bold;
-  margin-bottom: 16px;
-}
+FOOTER
 
-/* FOOTER */
+*/
 
 footer {
   background-color: #242424;
+}
+
+.footer__logo {
+  display: flex;
 }
 
 .footer__logo--img {
@@ -373,14 +401,7 @@ footer {
 
 .footer__link,
 .footer__copyright {
-  color: white;
-}
-
-.footer__column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  color: #fff;
 }
 
 .footer__list {
@@ -391,12 +412,82 @@ footer {
   padding: 0 8px;
 }
 
-.footer__logo {
+/* 
+**
+
+BOOKS PAGE
+
+**
+*/
+
+#books__body {
+  background-color: rgba(115, 66, 214, 0.1);
   display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-/* Media Sizing */
+#books__main {
+  flex: 1;
+}
 
+.books__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 24px;
+}
+
+.books__header--title {
+  margin-bottom: 0;
+}
+
+select {
+  background-color: #fff;
+  border-radius: 4px;
+  border: 1px solid #dcdfe6;
+  color: #606266;
+  height: 40px;
+  line-height: 40px;
+  outline: none;
+  padding: 0 16px;
+  width: 100%;
+  max-width: 200px;
+}
+
+.books__loading {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 60px;
+  font-size: 60px;
+  color: #7342d6;
+}
+
+.books__loading--spinner {
+  display: none !important;
+}
+
+.books__loading .books__loading--spinner {
+  display: block !important;
+}
+
+.fa-spinner {
+  animation: rotate 600ms infinite linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
 @media (max-width: 768px) {
   .header__description {
     padding: 0 24px;
@@ -417,14 +508,14 @@ footer {
   .book {
     width: 50%;
   }
-
-
 }
 
+
+/* SMALL PHONES, LARGE SMARTPHONES */
 @media (max-width: 550px) {
-.btn__menu {
-  display: block;
-}
+  .btn__menu {
+    display: block;
+  }
 
   .nav__links {
     display: none;
